--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "COVID-19 Cases/Vaccinations Analysis"
 description: |
-  Welcome to the website. I hope you enjoy it!
+  Welcome to the website! I hope you enjoy it!
 site: distill::distill_website
 ---
 
@@ -16,38 +16,45 @@ library(grid)
 clean_cases_data <- read_csv("owid-covid-data.csv") %>% 
   select(iso_code, date, new_cases_smoothed, new_cases_smoothed_per_million) %>% 
   filter(iso_code == c("CHN", "CAN", "USA", "GBR")) %>% 
-  mutate(new_cases_smoothed_per_million = new_cases_smoothed_per_million / 1000000) %>% 
+  mutate(new_cases_smoothed_percentage = new_cases_smoothed_per_million / 1000000) %>% 
   drop_na()
 
 clean_vaccinations_data <- read_csv("owid-covid-data.csv") %>% 
   select(iso_code, date, new_vaccinations_smoothed_per_million) %>% 
   filter(iso_code == c("CHN", "CAN", "USA", "GBR")) %>% 
-  mutate(new_vaccinations_smoothed_per_million = new_vaccinations_smoothed_per_million / 1000000) %>% 
+  mutate(new_vaccinations_smoothed_percentage = new_vaccinations_smoothed_per_million / 1000000) %>% 
   drop_na()
 ```
 
 ```{r, echo = FALSE}
 cases_graph <- clean_cases_data %>% 
   ggplot() +
-  geom_line(aes(x = date, y = new_cases_smoothed_per_million, color = iso_code)) +
+  geom_line(aes(x = date, y = new_cases_smoothed_percentage, color = iso_code)) +
   facet_wrap(~iso_code) +
   scale_y_continuous(labels = scales::percent_format()) +
   labs(title = "Daily COVID-19 Cases in four countries",
         subtitle = "Number of cases in China is siginificantly lower than others",
         x = "Date",
         y = "Daily Cases Percentage
-       ")
+       ",
+       color = "ISO country codes")
 
-ggplotly(cases_graph, tooltip = c("date", "new_cases_smoothed"))
+ggplotly(cases_graph, tooltip = c("date", "new_cases_smoothed_percentage"))
 ```
 
 ```{r, echo = FALSE}
 vaccinations_graph <- clean_vaccinations_data %>% 
   ggplot() +
-  geom_line(aes(x = date, y = new_vaccinations_smoothed_per_million, color = iso_code)) +
+  geom_line(aes(x = date, y = new_vaccinations_smoothed_percentage, color = iso_code)) +
   facet_wrap(~iso_code) +
-  scale_y_continuous(labels = scales::percent_format())
+  scale_y_continuous(labels = scales::percent_format()) +
+  labs(title = "Daily COVID-19 Vaccinations in four countries",
+        subtitle = "All countries made a significant progress on vaccination",
+        x = "Date",
+        y = "Daily Vaccinations Percentage
+       ",
+       color = "ISO country codes")
 
-ggplotly(vaccinations_graph, tooltip = c("date",  "new_vaccinations_smoothed_per_million"))
+ggplotly(vaccinations_graph, tooltip = c("date",  "new_vaccinations_smoothed_percentage"))
 ```
 
