--- a/conclusion.Rmd
+++ b/conclusion.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Conclusion"
 description: |
-  A few conclusion can be made based on the data.
+  A few conclusions can be made based on the data.
 output: distill::distill_article
 ---
 
